# sport-data-discord-bot

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKGROUND.MD  BetFairAPI.py  CLAUDE.md  Data_Processing.py  DiscordBot.py  Dockerfile  F1DataCollector.py  Makefile  Procfile  README.MD  README.md  aws_s3.py  betfair_api.py  discord_bot.py  driver_colour_directory.json  dropbox_api.py  f1_betfair_markets.py  f1_betting_collector.py  f1_data_collector.py  f1_data_logger.py  f1_data_processor.py  f1_meta_collector.py  f1_service.py  graph_producer.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.ebextensions/: cron-linux.config  ngix.config
.github/workflows/: build-push.yaml  deploy.yaml  test.yaml
documentation_sources/: banner_original.jfif
graphing/: calling.py  graphing_func.py
historic_data/: world_constructors_champion.json  world_drivers_champion.json
src/sport_data_bot/: __init__.py  __main__.py  aws_s3.py  betfair_api.py  bot.py  config.py  graph_producer.py  health.py  views.py
src/sport_data_bot/cogs/: commands.py  sport.py
tests/: conftest.py  test_betfair_probability.py  test_commands_cog.py  test_import.py  test_views.py
tools/: check_docker_cache.sh
