[project]
name = "sport-data-bot"
version = "0.1.0"
description = "Sport Data Discord Bot"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4,<3",
    "aiohttp>=3.9,<4",
    "betfairlightweight>=2.19,<3",
    "boto3>=1.34,<2",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "python-dotenv>=1.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sport_data_bot"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "black>=24",
    "flake8>=7",
    "pre-commit>=4.5.1",
    "requests>=2.31",
    "ruff>=0.15.5",
    "ty>=0.0.24",
]

[tool.black]
target-version = ["py311"]
line-length = 150

[tool.ruff]
target-version = "py311"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
